--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@toruslabs/torus-embed": "^1.20.4",
+    "@walletconnect/web3-provider": "^1.7.1",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "ethers": "^5.5.3",
     "vue": "^2.6.11",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.0",
+    "walletlink": "^2.4.6",
+    "web3modal": "^1.9.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
